--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "react-fundraising-countdown",
-  "version": "0.0.14",
-  "description": "ICO Fundraising component includes: countdown, progressbar, and milestones",
+  "version": "0.0.16",
+  "description":
+    "ICO Fundraising component includes: countdown, progressbar, and milestones",
   "main": "lib/index.js",
   "scripts": {
     "lib": "babel src/lib -d lib",
@@ -9,13 +10,7 @@
     "docs": "webpack-dev-server",
     "docs:prod": "webpack -p"
   },
-  "keywords": [
-    "ICO",
-    "countdown",
-    "fundraising",
-    "react",
-    "progressbar"
-  ],
+  "keywords": ["ICO", "countdown", "fundraising", "react", "progressbar"],
   "license": "MIT",
   "peerDependencies": {
     "react": "^15.3.0 || ^16.2.0",
